--- a/src/components/RightSide/RightSide.css
+++ b/src/components/RightSide/RightSide.css
@@ -1,25 +1,18 @@
-.RightSide{
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-}
-.navIcons{
+.navIcons {
     margin-top: 1rem;
     display: flex;
-    justify-content: space-between;
+    align-items: center; /* Align items vertically in the center */
+    gap: 1rem; /* Add some space between icons */
 }
-.navIcons>img{
-    width: 1.5rem;
-    height: 1.5rem;
-}
-.navIcons>a>img{
+
+.navIcons > img,
+.navIcons > svg,
+.navIcons > a > img {
     width: 1.5rem;
     height: 1.5rem;
 }
 
-.r-button{
-    height: 3rem;
-    width: 80%;
-    align-self: center;
+.navIcons > a > div {
+    width: 4rem;
+    height: 4rem;
 }
-
